<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/list_navigation_menu_item_health"
        android:icon="@drawable/ic_health"

        android:title="@string/my_health" />

    <item
        android:id="@+id/list_navigation_menu_item_progress"
        android:icon="@drawable/ic_progress"
        android:title="@string/my_progress" />

    <item
        android:id="@+id/list_navigation_menu_item_financial_health"
        android:icon="@drawable/ic_money"
        android:title="@string/my_financial_health" />
    <item
        android:id="@+id/list_navigation_menu_item_family"
        android:icon="@drawable/ic_family"
        android:title="@string/my_family" />




</menu>